[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = montage_wrapper
description = Python wrapper for the Montage mosaicking toolkit
long_description =
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
license = BSD
url = http://astropy.org/montage-wrapper/
edit_on_github = True
github_project = astropy/montage-wrapper
